frontend/test/should_fail/computations_do_while_001.grg
procedure foo(var x:int) : (int)
{
	while(x==1)
		return(1);
	return(0);
}

